@startuml classDiagram

Package Camera {
    class Camera_Manager {
        camera : Camera
        importPicture()
        takeNewPicture()
        choosePicture()
        chooseCamera()
        getAvailableCameras()
    }
    class CameraWindow {
        TakePicture()
        compression(img : BufferedImage) : BufferedImage
    }
    class ImportWindow
    {
        importPicture()
    }
}

Package Main {
    class App {
        main(String[] args)
    }
    class MainWindows
}

Package Data {

    Package BDD
    {
        class MariaDB {
            getConnection()
        }
        class MODIFBDDWindow {
            GenererTrombinoscope() : pdf
            GenererEmargement() : pdf
            ModifierBDD()
            importBDD(file : xlsx)
            exportBDD() : xlsx
        }
    }
    class PDF {
        makePDF()
    }
}
App -- MainWindows
MainWindows *-- CameraWindow
MainWindows *-- ImportWindow
CameraWindow --> Camera_Manager

MainWindows *-- MODIFBDDWindow
MainWindows .. MariaDB
MODIFBDDWindow .. PDF

@enduml